Stabilisation moteur core

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </div>
     </div>
 
+    <script src="core/engine.js"></script>
     <script type="module" src="script.js"></script>
   </body>
 </html>
